[Averan] Started work on syntactic priority handling in TexPrinter.